--- a/hobbies.html
+++ b/hobbies.html
@@ -9,11 +9,12 @@
 <body>
   <nav>
     <ul>
-      <li><a href="index.html">Main Page</a></li>
-      <li><a href="resume.html">My Resume</a></li>
-      <li><a href="hobbies.html">My Hobbies</a></li>
+      <li><a href="index.html">About Me</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="games.html">Video Games</a></li>
     </ul>
   </nav>
+  
 </body>
 
 </html>
