--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,33 @@
       <li><a href="games.html">Video Games</a></li>
     </ul>
   </nav>
-
+  <h1>Juan Andres Simone Perez</h1>
+  <h2>How to contact me</h2>
+  <p>Email: jsimone@hawk.iit.edu</p>
+  <p>Phone Number: +1 312 605-2788</p>
+  <p>My Linkedin: <a href="https://www.linkedin.com/in/juansimone/">Click Here</a></p>
+  <h2>DATA ENGINEER & SCIENTIST, DEVELOPER, FAST LEARNER, AND ENTREPRENEURIAL INNOVATOR</h2>
+  <p>As a current master's student in Computer Science, my foundation in technology is enriched not just by academic insights, but also by invaluable hands-on experiences gained from on-the-job learnings. This multifaceted exposure allows me to craft solutions that are both inventive and deeply rooted in the realities of the problem at hand. I don't solely rely on prior knowledge; I adapt, evolve, and draw from the immediate context of each challenge. My commitment to understanding and addressing the true essence of every issue ensures that the solutions are focused on adding value, relevance, and of the highest caliber backed by my technical knowledge.</p>
+  <h2>AREAS OF EXPERTISE</h2>
+  <p>Python Developer | Machine Learning | Google Cloud | Web Developer | Django | JavaScript | HTML | CSS | React | REST Framework | API | Analytical mindset | Agile methodologies | Cyber security knowledge | Process Improvement | Program Management | Fluent in three languages (Spanish, Portugues, and English), allowing me to effectively communicate and collaborate with diverse teams and stakeholders across the world.</p>
+  <h2>PROFESSIONAL EXPERIENCE</h2>
+  <h3>INTEGRATION CONSULTING</h3>
+  <p>Integration Consulting is a global consulting firm Headquartered in Brazil, with offices in Latin America, North America, and Europe, +400 employees. Offering an ample range of services such as Tech&Digital, Marketing and Sales, Finance and Management, amongst others.</p>
+  <h4>ROLE</h4>
+  <p><b>TECHNICAL EXPERT - DIGITAL PRODUCT LAB, TECH & DIGITAL PRACTICE</b></p>
+  <ul>
+    <li>Developed premium products, analyses, and models for global clientele, encompassing demand and supply prediction, data cleansing, impact levers in CX, and a web platform monitoring crucial KPIs and metrics.</li>
+    <li>Spearheaded the creation and upkeep of essential digital products for diverse clients, emphasizing sustainable feature enhancements within existing infrastructure.</li>
+    <li>Pioneered technological solutions within the various Integration practices.</li>
+    <li>Deployed machine learning models for distinct clients, illuminating pivotal demand and supply insights to empower key decisions.</li>
+    <li>Established and sustained technical frameworks subsequently adopted for internal training purposes.</li>
+    <li>I have been specializing and utilizing different technologies for these deliverables, such as Django, Rest Framework, Google Cloud (Cloud Infrastructure/Services), Python Libraries for ML, amongst others.</li>
+  </ul>
+  <h2>EDUCATION</h2>
+  <ul>
+    <li><b>Computer Science Undergraduate (Class of 2025)</b> - Illinois Institute of Technology - Chicago</li>
+    <li><b>Computer Science Accelerated Master's Program (Class of 2025)</b> - Illinois Institute of Technology - Chicago</li>
+  </ul>
 </body>
 
 </html>
