fixed nav bar as I changed my key pages names and forgot to updat eit

--- a/resume.html
+++ b/resume.html
@@ -9,9 +9,9 @@
 <body>
   <nav>
     <ul>
-      <li><a href="index.html">About Me</a></li>
-      <li><a href="resume.html">Resume</a></li>
-      <li><a href="games.html">Video Games</a></li>
+      <li><a href="index.html">Main Page</a></li>
+      <li><a href="resume.html">My Resume</a></li>
+      <li><a href="hobbies.html">My Hobbies</a></li>
     </ul>
   </nav>
   <h1>Juan Andres Simone Perez</h1>
@@ -26,7 +26,6 @@
   <h2>PROFESSIONAL EXPERIENCE</h2>
   <h3>INTEGRATION CONSULTING</h3>
   <p>Integration Consulting is a global consulting firm Headquartered in Brazil, with offices in Latin America, North America, and Europe, +400 employees. Offering an ample range of services such as Tech&Digital, Marketing and Sales, Finance and Management, amongst others.</p>
-  <h4>ROLE</h4>
   <p><b>TECHNICAL EXPERT - DIGITAL PRODUCT LAB, TECH & DIGITAL PRACTICE</b></p>
   <ul>
     <li>Developed premium products, analyses, and models for global clientele, encompassing demand and supply prediction, data cleansing, impact levers in CX, and a web platform monitoring crucial KPIs and metrics.</li>
