finished version of my resume page

--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
   <h2>PROFESSIONAL EXPERIENCE</h2>
   <h3>INTEGRATION CONSULTING</h3>
   <p>Integration Consulting is a global consulting firm Headquartered in Brazil, with offices in Latin America, North America, and Europe, +400 employees. Offering an ample range of services such as Tech&Digital, Marketing and Sales, Finance and Management, amongst others.</p>
-  <p><b>TECHNICAL EXPERT - DIGITAL PRODUCT LAB, TECH & DIGITAL PRACTICE</b></p>
+  <p>TECHNICAL EXPERT - DIGITAL PRODUCT LAB, TECH & DIGITAL PRACTICE</p>
   <ul>
     <li>Developed premium products, analyses, and models for global clientele, encompassing demand and supply prediction, data cleansing, impact levers in CX, and a web platform monitoring crucial KPIs and metrics.</li>
     <li>Spearheaded the creation and upkeep of essential digital products for diverse clients, emphasizing sustainable feature enhancements within existing infrastructure.</li>
@@ -37,8 +37,8 @@
   </ul>
   <h2>EDUCATION</h2>
   <ul>
-    <li><b>Computer Science Undergraduate (Class of 2025)</b> - Illinois Institute of Technology - Chicago</li>
-    <li><b>Computer Science Accelerated Master's Program (Class of 2025)</b> - Illinois Institute of Technology - Chicago</li>
+    <li>Computer Science Undergraduate (Class of 2025) - Illinois Institute of Technology - Chicago</li>
+    <li>Computer Science Accelerated Master's Program (Class of 2025) - Illinois Institute of Technology - Chicago</li>
   </ul>
 </body>
 
