--- a/hobbies.html
+++ b/hobbies.html
@@ -14,7 +14,46 @@
       <li><a href="hobbies.html">My Hobbies</a></li>
     </ul>
   </nav>
-  
+  <h1>Reading</h1>
+  <section id="currentBooks">
+    <p>There are a couple of books I enjoy, here as 2 of the ones I enjoyed the most:</p>
+    <h2>Lord of the Mysteries</h3>
+    <img src="images/lotm.png" alt="Lord of The Mysteries" width="200" height="325">
+    <p>Lord of Mysteries is a western fantasy (xuanhuan) web novel written by the Chinese author "Cuttlefish That Loves Diving" (his pen name) and published on QiDian.</p>
+    <p>It is a fantasy, magical and technologically regressed world, where the main character discoveres many secretes of this world and tries to avoid destruction alongside it.</p>
+    <p>The second part has been released and I am currently waiting for it to be completed to continue reading it.</p>
+    <h2>Reverend Insanity</h3>
+    <img src="images/reverendinsanity.PNG" alt="Reverend Insanity" width="200" height="325">
+    <p>Reverend Insanity was written by the author Gu Zhen Ren beginning around July 2017, as this was the time he released the first chapter.</p>
+    <p>The story revolves around a young man called Fang Yuan, where he is at deaths door after creating an object that will allow him to go back in time, however he has no clue of the implications that such as action will have on his life, and consequently on his fate.</p>
+  </section>
+  <h1>Gaming</h1>
+  <section id="games">
+    <p>There is only one game that I have played the most, that is:</p>
+    <h2>Counter Strike: Global Offensive</h3>
+    <img src="images/csgo.PNG" alt="Counter Strike: Global Offensive" width="325" height="200">
+    <p>Counter-Strike: Global Offensive (CS:GO) was released on August 21, 2012 by Valve Corporation together with Hidden Path Entertainment. They were pioneers in the constructions of micro-transactions inside video games with the addition of skins to the game.</p>
+    <p>Currently I have a humble 6220hours, most of which I have spent during my early days as a teenager, competing in tournaments and playing professional before coming to college. Here is a quick clip from a tournament in which I played in back in Brazil:</p>
+    <iframe src="media/csgoClip.mp4" title="Tournament clip in CS:GO" width="700" height="400" allowfullscreen></iframe>
+  </section>
+  <h1>Cooking</h1>
+  <section id="cooking">
+    <p>I enjoying cooking a lot recently, specially sweets. I wish to share one such dessert I have made recently.</p>
+    <h2>Pudding</h3>
+    <img src="images/pudding.jpg" alt="Pudding" width="200" height="325">
+    <p>This is the pudding I made. I do not wish to gatekeep the recipe so this is exactly what I used in case that anyone wishes to make it, however it is in portuguese.</p>
+    <ul>
+      <li>450ml milk</li>
+      <li>1 "Leite Condensado"</li>
+      <li>2 "full" eggs</li>
+      <li>4 egg yolks</li>
+    </ul>
+    <p>And for the sweet syrup on top:</p>
+    <ul>
+      <li>1 Cup of Sugar</li>
+      <li>1/2 Cup of Water</li>
+    </ul>
+  </section>
 </body>
 
 </html>
