translated the recipe to english

--- a/hobbies.html
+++ b/hobbies.html
@@ -41,10 +41,10 @@
     <p>I enjoying cooking a lot recently, specially sweets. I wish to share one such dessert I have made recently.</p>
     <h2>Pudding</h3>
     <img src="images/pudding.jpg" alt="Pudding" width="200" height="325">
-    <p>This is the pudding I made. I do not wish to gatekeep the recipe so this is exactly what I used in case that anyone wishes to make it, however it is in portuguese.</p>
+    <p>This is the pudding I made. I do not wish to gatekeep the recipe so this is exactly what I used in case that anyone wishes to make it:</p>
     <ul>
       <li>450ml milk</li>
-      <li>1 "Leite Condensado"</li>
+      <li>1 Condensed Milk (1 can)</li>
       <li>2 "full" eggs</li>
       <li>4 egg yolks</li>
     </ul>
