added some information to my index.html

--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
       <li><a href="hobbies.html">My Hobbies</a></li>
     </ul>
   </nav>
-</body>
   <h1>This is a couple things about me.</h1>
-  <p></p>
+  <p>My name is Juan Andres Simone Perez, I am currently pursuing my masters degree in Computer Science with a specialization in Software Engineering. I am also currently working part-time 30hrs a week as a Data Engineer at Mondelez International where I am exposed to new challenges every single day.</p>
+  <h2>Main Interests</h2>
+  <p>Currently I enjoy creating new things on frameworks I find online, such as react, django and hosting these digital applications on a cloud environment. I am mainly knowledgeable on GCP and use it for some of my personal projects.</p>
+  <p>I also enjoy reading a lot in my free time, alongside playing games and cooking new things whenever I have the time.</p>
+  <h2>New Things in my Life</h2>
+  <p>Hopefully I will be graduting next semester, Fall 2024 with my Masters and Undegraduate in Computer Science.</p>
+  <p>I recently moved, 11th of February, to an apartment in Chicago. I am very happy with this new place as I am closer to University and makes commuting way quicker.</p>
+  <p>Recently I celebrated my 5th aniversary of being together with my girlfriend, we went to an amazing Korean restaurant which had amazing food and service.</p>
+</body>
   
 </html>
