trying to fix image not showing up

--- a/hobbies.html
+++ b/hobbies.html
@@ -18,7 +18,7 @@
   <section id="currentBooks">
     <p>There are a couple of books I enjoy, here as 2 of the ones I enjoyed the most:</p>
     <h2>Lord of the Mysteries</h2>
-    <img src="images/lotm.png" alt="Lord of The Mysteries" width="200" height="325">
+    <img src="images/lotmImage.PNG" alt="Lord of The Mysteries" width="200" height="325">
     <p>Lord of Mysteries is a western fantasy (xuanhuan) web novel written by the Chinese author "Cuttlefish That Loves Diving" (his pen name) and published on QiDian.</p>
     <p>It is a fantasy, magical and technologically regressed world, where the main character discoveres many secretes of this world and tries to avoid destruction alongside it.</p>
     <p>The second part has been released and I am currently waiting for it to be completed to continue reading it.</p>
