--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <p>Currently I enjoy creating new things on frameworks I find online, such as react, django and hosting these digital applications on a cloud environment. I am mainly knowledgeable on GCP and use it for some of my personal projects.</p>
   <p>I also enjoy reading a lot in my free time, alongside playing games and cooking new things whenever I have the time.</p>
   <p>I also really enjoy One Piece, here is my favorite character from the series</p>
-  <img src="images/chopper.png" alt="Chopper from One Piece" width="600" height="300">
+  <img src="images/chopper.png" alt="Image from the popular anime One Piece, depicting Tony Tony Chopper dancing">
   <h2>New Things in my Life</h2>
   <p>Hopefully I will be graduting next semester, Fall 2024 with my Masters and Undegraduate in Computer Science.</p>
   <p>I recently moved, 11th of February, to an apartment in Chicago. I am very happy with this new place as I am closer to University and makes commuting way quicker.</p>
@@ -28,9 +28,9 @@
     Recently I celebrated my 5th aniversary of being together with my girlfriend, we went to an amazing Korean restaurant which had amazing food and service.
     The restaurant is located in Glenview, however it is 100% worth the drive to go to this place.
   </p>
-  <img src="images/restaurant.png" alt="Korean Restaurant" width="600" height="400">
+  <img src="images/restaurant.png" alt="Really good Korean Restaurant located in glenview, il chicago">
   <p>I have been trying to listen to new music. Recently I have come to enjoy this artist that goes by the name of "LiSA", she does covers and original songs. Here is a quick cover that she did that is one of my favorites so far:</p>
-  <img src="images/spiderverse.jpg" alt="Spider Verse LiSA Cover" width="250" height="150">
+  <img src="images/spiderverse.jpg" alt="Spider Verse music from the Spider Verse movie, it was covered by the japanese artist LiSA">
   <audio src="media/lisarealize.mp3" controls></audio>
 </body>
   
