--- a/hobbies.html
+++ b/hobbies.html
@@ -36,7 +36,7 @@
     <img src="images/csgo.png" alt="Image of the of popular game Counter Strike: Global Offensive">
     <p>Counter-Strike: Global Offensive (CS:GO) was released on August 21, 2012 by Valve Corporation together with Hidden Path Entertainment. They were pioneers in the constructions of micro-transactions inside video games with the addition of skins to the game.</p>
     <p>Currently I have a humble 6220 hours, most of which I have spent during my early days as a teenager, competing in tournaments and playing professional before coming to college. Here is a quick clip from a tournament in which I played in back in Brazil:</p>
-    <iframe src="media/csgoClip.mp4" title="Videogame clip of myself playing CSGO in a Tournament" allowfullscreen></iframe>
+    <iframe src="media/csgoclip.mp4" title="Videogame clip of myself playing CSGO in a Tournament" allowfullscreen></iframe>
   </section>
 
   <h1>Cooking</h1>
